tdf#127409 Use document-specific value for "Print empty pages"

The check whether or not to print empty pages introduced by
commit cc46e7b9c75ddbcaaefde5f396ba76b0b866fa58
("tdf#116537: use page #s excluding empty pages when they
are ignored") used the config option, while the option
actually being used during mail merge can be overriden by
the document settings, s. commit
8385e511aa400e9bd99fd0ca1c5bd5d130277b8a
("tdf#117664: mailmerge: copy printer settings to new mailmerge
document").

Change-Id: I3ccc97e260e3bb9e08aa74a305bfda30656a322f
Reviewed-on: https://gerrit.libreoffice.org/78713
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 7d7f024f23024374219a9485a9e1893a221a30fa)
Reviewed-on: https://gerrit.libreoffice.org/78757
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>